syntax = "proto3";
option go_package = ".;proto";

import "google/api/annotations.proto";
import "common.proto";

service Indexer {

  /**
      Method: GetIndexerStatus
      Input: message Empty
      Response: message IndexerStatus
      Description: Returns current status of the Indexer and connected Ogen node.
  */

  rpc GetIndexerStatus(Empty) returns (IndexerStatus) {
    option (google.api.http) = {
      get: "/indexer/status"
    };
  }

  /**
        Method: GetBlockHash
        Input: message Number
        Response: message GetBlockHashResponse
        Description: Returns the hash string of the block at specified height
    */

  rpc GetBlockHash(Number) returns (Hash) {
    option (google.api.http) = {
      get: "/indexer/blockhash/{number}"
    };
  }

  /**
      Method: GetTransaction
      Input: message Hash
      Response: message Tx
      Description: Returns "normalized" data about transaction
  */

  rpc GetTransaction(Hash) returns (Tx) {
    option (google.api.http) = {
      get: "/indexer/tx/{hash}"
    };
  }

  /**
      Method: GetDetailedTransaction
      Input: message Hash
      Response: message TxDetail
      Description: Returns the data about transaction, plus additional information of the block
  */

  rpc GetDetailedTransaction(Hash) returns (TxDetail) {
    option (google.api.http) = {
      get: "/indexer/tx-detail/{hash}"
    };
  }

  /**
      Method: GetAccount
      Input: message Account
      Response: message Address
      Description: Returns balances and transactions of an address. The returned transactions are sorted by block height, newest blocks first.
  */

  rpc GetAccount(Account) returns (AccountDetail) {
    option (google.api.http) = {
      get: "/indexer/account/{account}"
    };
  }

  /**
        Method: GetBlock
        Input: message BlockHash
        Response: message Block
        Description: Returns the block from a block hash.
    */

  rpc GetBlock(Hash) returns (Block) {
    option (google.api.http) = {
      get: "/indexer/block/{hash}"
    };
  }

  /**
        Method: GetBlockTxs
        Input: message BlockHash
        Response: message BlockTxs
        Description: Returns a list of transaction hashes that were included in the block
    */

  rpc GetBlockTxs(Hash) returns (BlockTxs) {
    option (google.api.http) = {
      get: "/indexer/block/{hash}"
    };
  }
}


message IndexerStatus {
  uint32 last_block_height = 1;
  uint64 last_block_time = 2;
  uint64 db_size = 3;
  bool initial_sync = 4;
  bool in_sync = 5;
  string about = 6;
}

message AccountDetail {
  string account = 1;
  Balance balance = 2;
  uint64 nonce = 3;
  string total_received = 4;
  string total_sent = 5;
  uint64 txs = 6;
  HashList tx_list = 7;
}

message HashList {
  repeated string hash = 1;
}

message BlockTxs {
  uint64 tx_count = 1;
  HashList txs = 2;
}

message TxDetail {
  Tx tx = 1;
  string block_hash = 2;
  string block_height = 3;
  int64 confirmations = 4;
  uint64 block_time = 5;
}